edit for grub modules

--- a/filesystems-for-dummies/index.html
+++ b/filesystems-for-dummies/index.html
@@ -81,6 +81,8 @@ Welcome to a new post from this very irregular blog! After busy summer holidays 
 
 <p>This is just a matter of generating the filesystem with <code class="language-plaintext highlighter-rouge">mkfs.ext2</code> and placing it in the modules directory. The kernel then sees it as just another module, so we make an exception for it and feed it into the ext2 driver.</p>
 
+<p><em>Edit 19/10/2020:</em> while the problem described in the following parapgraph was indeed present in SnowflakeOS at the time of writing, it was in fact trivial to solve, and solved in <a href="https://github.com/29jm/SnowflakeOS/commit/7d9494271329675e5f13a378012c58b301199cbd">7d94942</a>. Thanks /u/TheMonax :)</p>
+
 <p>The thing with modules in SnowflakeOS though is that they can’t exceed a certain size, around 3 MiB. The reason for that is that the physical memory manager stores its bitmap just after the kernel and its modules in memory, and when the PMM runs, the kernel has 4 MiB mapped for itself. If modules grow too large, the bitmap ends up unmapped and <em>fun</em> things happen. And it’s too late then to map more memory: paging code has to be able to allocate physical pages, which requires a valid bitmap, etc…</p>
 
 <p>All in all, our disk shall take the form of a pointer to a large area of memory containing the filesystem. In order to facilitate the transition to a real disk later, I decided to constrain myself to block sized reads and writes, hopefully that’s how they work, modulo their block size.</p>
