lighten logo, remove draft post

--- a/switches-and-knobs/index.html
+++ b/switches-and-knobs/index.html
@@ -50,7 +50,7 @@ In the last post, I discussed how I implemented collaborative execution in Snowf
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="/assets/logo_big.png" /></a>
+          <a href="/" class="site-avatar"><img src="/assets/logo_big.jpg" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">SnowflakeOS</a></h1>
