--- a/a-need-for-speed/index.html
+++ b/a-need-for-speed/index.html
@@ -50,7 +50,7 @@ At the end of the last post we had a pretty solid memory allocator. Where does t
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="/assets/logo_big.png" /></a>
+          <a href="/" class="site-avatar"><img src="/assets/logo_big.jpg" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">SnowflakeOS</a></h1>
