--- a/absolute-state-of-snowflakeos/index.html
+++ b/absolute-state-of-snowflakeos/index.html
@@ -52,7 +52,7 @@ each of them here should help me get some knowledge back.
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="/assets/logo_big.png" /></a>
+          <a href="/" class="site-avatar"><img src="/assets/logo_big.jpg" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">SnowflakeOS</a></h1>
