--- a/advanced-memory-allocation/index.html
+++ b/advanced-memory-allocation/index.html
@@ -50,7 +50,7 @@ Today I’ll be writing about memory allocation, a fairly fundamental topic, per
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="/assets/logo_big.png" /></a>
+          <a href="/" class="site-avatar"><img src="/assets/logo_big.jpg" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">SnowflakeOS</a></h1>
