--- a/filesystems-for-dummies/index.html
+++ b/filesystems-for-dummies/index.html
@@ -50,7 +50,7 @@ Welcome to a new post from this very irregular blog! After busy summer holidays 
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="/assets/logo_big.png" /></a>
+          <a href="/" class="site-avatar"><img src="/assets/logo_big.jpg" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">SnowflakeOS</a></h1>
