--- a/of-mice-and-keyboards/index.html
+++ b/of-mice-and-keyboards/index.html
@@ -52,7 +52,7 @@ So I went over to OSDev’s article about PS/2 keyboards, which sent me to the a
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="/assets/logo_big.png" /></a>
+          <a href="/" class="site-avatar"><img src="/assets/logo_big.jpg" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">SnowflakeOS</a></h1>
