--- a/window-manager/index.html
+++ b/window-manager/index.html
@@ -52,7 +52,7 @@ Ironically, by switching away from text mode, we lose the immediate ability to p
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="/assets/logo_big.png" /></a>
+          <a href="/" class="site-avatar"><img src="/assets/logo_big.jpg" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">SnowflakeOS</a></h1>
