--- a/a-terminal-at-last/index.html
+++ b/a-terminal-at-last/index.html
@@ -50,7 +50,7 @@ Let’s face it, it’s hard to get excited about a kernel from just barebone de
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="/assets/logo_big.jpg" /></a>
+          <a href="/" class="site-avatar"><img src="/assets/logo_big.png" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">SnowflakeOS</a></h1>
