--- a/setting-up-the-environnement/index.html
+++ b/setting-up-the-environnement/index.html
@@ -48,7 +48,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="/assets/logo_big.jpg" /></a>
+          <a href="/" class="site-avatar"><img src="/assets/logo_big.png" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">SnowflakeOS</a></h1>
