--- a/room-for-improvements/index.html
+++ b/room-for-improvements/index.html
@@ -34,6 +34,7 @@ In the last post, I presented the first working version of SnowflakeOS’s windo
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Avenir" />
     <link rel="alternate" type="application/rss+xml" title="SnowflakeOS - Locally grown blog posts, by Johan Manuel" href="/feed.xml" />
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
