--- a/userspace/index.html
+++ b/userspace/index.html
@@ -36,6 +36,7 @@ The transition to having processes roam free in ring 3 was mostly made in the se
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Avenir" />
     <link rel="alternate" type="application/rss+xml" title="SnowflakeOS - Locally grown blog posts, by Johan Manuel" href="/feed.xml" />
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
