--- a/a-terminal-at-last/index.html
+++ b/a-terminal-at-last/index.html
@@ -34,6 +34,7 @@ Let’s face it, it’s hard to get excited about a kernel from just barebone de
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Avenir" />
     <link rel="alternate" type="application/rss+xml" title="SnowflakeOS - Locally grown blog posts, by Johan Manuel" href="/feed.xml" />
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
