--- a/filesystems-for-dummies/index.html
+++ b/filesystems-for-dummies/index.html
@@ -34,6 +34,7 @@ Welcome to a new post from this very irregular blog! After busy summer holidays 
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Avenir" />
     <link rel="alternate" type="application/rss+xml" title="SnowflakeOS - Locally grown blog posts, by Johan Manuel" href="/feed.xml" />
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
