--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Avenir" />
     <link rel="alternate" type="application/rss+xml" title="SnowflakeOS - Locally grown blog posts, by Johan Manuel" href="/feed.xml" />
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
