--- a/a-need-for-speed/index.html
+++ b/a-need-for-speed/index.html
@@ -34,7 +34,8 @@ At the end of the last post we had a pretty solid memory allocator. Where does t
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Avenir" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Avenir" />
+    <link rel="stylesheet" type="text/css" src="https://fonts.googleapis.com/css?family=Source+Code+Pro" />
     <link rel="alternate" type="application/rss+xml" title="SnowflakeOS - Locally grown blog posts, by Johan Manuel" href="/feed.xml" />
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
