--- a/advanced-memory-allocation/index.html
+++ b/advanced-memory-allocation/index.html
@@ -34,7 +34,8 @@ Today I’ll be writing about memory allocation, a fairly fundamental topic, per
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Avenir" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Avenir" />
+    <link rel="stylesheet" type="text/css" src="https://fonts.googleapis.com/css?family=Source+Code+Pro" />
     <link rel="alternate" type="application/rss+xml" title="SnowflakeOS - Locally grown blog posts, by Johan Manuel" href="/feed.xml" />
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
