--- a/of-mice-and-keyboards/index.html
+++ b/of-mice-and-keyboards/index.html
@@ -36,7 +36,8 @@ So I went over to OSDev’s article about PS/2 keyboards, which sent me to the a
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Avenir" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Avenir" />
+    <link rel="stylesheet" type="text/css" src="https://fonts.googleapis.com/css?family=Source+Code+Pro" />
     <link rel="alternate" type="application/rss+xml" title="SnowflakeOS - Locally grown blog posts, by Johan Manuel" href="/feed.xml" />
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
