--- a/room-for-improvements/index.html
+++ b/room-for-improvements/index.html
@@ -34,7 +34,8 @@ In the last post, I presented the first working version of SnowflakeOS’s windo
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Avenir" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Avenir" />
+    <link rel="stylesheet" type="text/css" src="https://fonts.googleapis.com/css?family=Source+Code+Pro" />
     <link rel="alternate" type="application/rss+xml" title="SnowflakeOS - Locally grown blog posts, by Johan Manuel" href="/feed.xml" />
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
