--- a/hiking/index.html
+++ b/hiking/index.html
@@ -72,9 +72,9 @@
           January 21, 2021
         </i>
         <figure>
-    <img src="/assets/hrp-path.png" />
+    <img src="/assets/hrp/hrp-path.jpg" />
 </figure>
-<p>En août 2020, j’ai entrepris de marcher le long de la Haute Route Pyrénéenne, ou HRP, depuis Cauterets en direction de Banyuls-sur-Mer, la Méditerranée. J’ai documenté le voyage au jour le jour, dont le résumé est fait ici.</p>
+<p>En août 2020, j’ai entrepris de marcher le long de la Haute Route Pyrénéenne (HRP), depuis Cauterets en direction de Banyuls-sur-Mer, la Méditerranée. J’ai documenté le voyage au jour le jour, dont le résumé est fait ici.</p>
 
 
       </div>
