--- a/hiking/hiking-the-pyrenees/index.html
+++ b/hiking/hiking-the-pyrenees/index.html
@@ -134,7 +134,7 @@ En août 2020, j’ai entrepris de marcher le long de la Haute Route Pyrénéenn
 
 <h3 id="day-5-barroude-to-parzán">Day 5: Barroude to Parzán</h3>
 
-<p>Passage en Espagne au Port de Barroude ce matin ! Des vieux m’indiquaient des isards sur mon chemin mais nulle trace. Bain près de la grande route - la chaleur me tue. Courses ratées à Parzán: 3600 kcal pour trois jours → j’allais mourrir de faim. Demain je pars à Bielsa chercher un distributeur de billets, plus de bouffe, de quoi me sustenir et payer le repas d’auberge à Viados ou Soula. La montée depuis Parzán a été rude, entre la chaleur, le manque d’eau et l’incertitude sur la proximité d’un spot campable, que je finis par trouver près d’une cascade<sup class="tooltip">[6]<span>bouchons d’oreil recommandés</span></sup>.</p>
+<p>Passage en Espagne au Port de Barroude ce matin ! Des vieux m’indiquaient des isards sur mon chemin mais nulle trace. Bain près de la grande route - la chaleur me tue. Courses ratées à Parzán: 3600 kcal pour trois jours → j’allais mourrir de faim. Demain je pars à Bielsa chercher un distributeur de billets, plus de bouffe, de quoi me sustenir et payer le repas d’auberge à Viados ou Soula. La montée depuis Parzán a été rude, entre la chaleur, le manque d’eau et l’incertitude sur la proximité d’un spot campable, que je finis par trouver près d’une cascade<sup class="tooltip">[6]<span>bouchons d’oreil recommandés</span></sup>. À Parzán, j’ai acheté des limes, qui viennent à bout de mon problème d’orteil.</p>
 
 <p>Parler espagnol me fait perdre 50 points de QI.</p>
 
