--- a/a-terminal-at-last/index.html
+++ b/a-terminal-at-last/index.html
@@ -63,7 +63,7 @@ Let’s face it, it’s hard to get excited about a kernel from just barebone de
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
