--- a/absolute-state-of-snowflakeos/index.html
+++ b/absolute-state-of-snowflakeos/index.html
@@ -63,7 +63,7 @@ each of them here should help me get some knowledge back.
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
