--- a/advanced-memory-allocation/index.html
+++ b/advanced-memory-allocation/index.html
@@ -63,7 +63,7 @@ Today I’ll be writing about memory allocation, a fairly fundamental topic, per
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
