--- a/filesystems-for-dummies/index.html
+++ b/filesystems-for-dummies/index.html
@@ -63,7 +63,7 @@ Welcome to a new post from this very irregular blog! After busy summer holidays 
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
