--- a/hiking/hiking-the-pyrenees/index.html
+++ b/hiking/hiking-the-pyrenees/index.html
@@ -67,7 +67,7 @@ En août 2020, j’ai entrepris de marcher le long de la Haute Route Pyrénéenn
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
