--- a/of-mice-and-keyboards/index.html
+++ b/of-mice-and-keyboards/index.html
@@ -65,7 +65,7 @@ So I went over to OSDev’s article about PS/2 keyboards, which sent me to the a
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
