--- a/porting-doom/index.html
+++ b/porting-doom/index.html
@@ -63,7 +63,7 @@ Some things in life are inevitable. The passing of seasons, the fall of empires,
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
