--- a/room-for-improvements/index.html
+++ b/room-for-improvements/index.html
@@ -63,7 +63,7 @@ In the last post, I presented the first working version of SnowflakeOS’s windo
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
