--- a/switches-and-knobs/index.html
+++ b/switches-and-knobs/index.html
@@ -63,7 +63,7 @@ In the last post, I discussed how I implemented collaborative execution in Snowf
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
