--- a/userspace/index.html
+++ b/userspace/index.html
@@ -65,7 +65,7 @@ The transition to having processes roam free in ring 3 was mostly made in the se
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
