--- a/window-manager/index.html
+++ b/window-manager/index.html
@@ -65,7 +65,7 @@ Ironically, by switching away from text mode, we lose the immediate ability to p
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
