--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
