--- a/a-need-for-speed/index.html
+++ b/a-need-for-speed/index.html
@@ -63,7 +63,7 @@ At the end of the last post we had a pretty solid memory allocator. Where does t
 
           <nav>
             <a href="/">SnowflakeOS</a>
-            <a href="/hiking">Hiking</a>
+            <!-- <a href="/hiking">Hiking</a> -->
             <a href="/about">About</a>
           </nav>
         </header>
